--- a/package.json
+++ b/package.json
@@ -3,23 +3,34 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@ant-design/icons": "^5.6.0",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^13.0.0",
-		"@testing-library/user-event": "^13.2.1",
-		"@types/jest": "^27.0.1",
-		"@types/node": "^16.7.13",
-		"@types/react": "^19.0.8",
-		"@types/react-dom": "^19.0.3",
-		"antd": "^5.23.3",
+		"@ant-design/icons": "^5.5.2",
+		"@reduxjs/toolkit": "^2.4.0",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"antd": "^5.22.4",
 		"antd-style": "^3.7.1",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.5",
+		"axios": "^1.7.9",
+		"chart.js": "^4.4.7",
+		"dayjs": "^1.11.13",
+		"e-learning-app": "file:",
+		"firebase": "^11.2.0",
+		"greenfinity": "file:",
+		"moment": "^2.30.1",
+		"react": "^18.3.1",
+		"react-chartjs-2": "^5.3.0",
+		"react-dom": "^18.3.1",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^7.0.2",
 		"react-scripts": "5.0.1",
-		"tailwindcss": "^4.0.3",
-		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"react-slick": "^0.30.2",
+		"redux": "^5.0.1",
+		"slick-carousel": "^1.8.1",
+		"typescript": "^4.9.5",
+		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -47,12 +58,11 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"autoprefixer": "^9",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-prettier": "^5.2.3",
-		"postcss": "^7",
-		"postcss-loader": "^8.1.1",
+		"@types/react-slick": "^0.23.13",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.49",
 		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.11"
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"tailwindcss": "^3.4.16"
 	}
 }
