--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
 		"chart.js": "^4.4.7",
 		"dayjs": "^1.11.13",
 		"e-learning-app": "file:",
-		"firebase": "^11.2.0",
+		"firebase": "^11.4.0",
 		"greenfinity": "file:",
 		"moment": "^2.30.1",
 		"react": "^18.3.1",
 		"react-chartjs-2": "^5.3.0",
+		"react-countdown-circle-timer": "^3.2.1",
 		"react-dom": "^18.3.1",
 		"react-quill": "^2.0.0",
 		"react-redux": "^9.1.2",
@@ -31,6 +32,7 @@
 		"redux": "^5.0.1",
 		"slick-carousel": "^1.8.1",
 		"typescript": "^4.9.5",
+		"uuid": "^11.1.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
